add more lenient search to lucky button, add serious button

--- a/index.html
+++ b/index.html
@@ -34,8 +34,11 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-3 offset-2">
-					<button id="search" type="button">I'm Feeling Stacky</button>
+				<div class="col-4 offset-2">
+					<button id="luckySearch" type="button">I'm Feeling Stacky</button>
+				</div>
+				<div class="col-4">
+					<button id="srsSearch" type="button">I'm Feeling Serious</button>
 				</div>
 			</div>
 			<div class="row">
