update button style add spacing

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<div class="col-4 offset-2">
 					<button id="luckySearch" type="button">I'm Feeling Stacky</button>
 				</div>
-				<div class="col-4">
+				<div class="col-4 align-right">
 					<button id="srsSearch" type="button">I'm Feeling Serious</button>
 				</div>
 			</div>
