--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
 				<div class="tiny-text">
 					This site is not affiliated with stackexchange or any of its relevant websites.
 				</div>
+				<div class="tiny-text">
+					<a href="https://github.com/deedubwhy/feeling-stacky">Source on github</a>
+				</div>
 			</div>
 		</div>
 	</div>
