--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-4 offset-2">
+				<div class="col-3 offset-3">
 					<button id="luckySearch" type="button">I'm Feeling Stacky</button>
 				</div>
-				<div class="col-4 align-right">
+				<div class="col-3 align-right">
 					<button id="srsSearch" type="button">I'm Feeling Serious</button>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-8 offset-2">
-					<h4 class="response-field" id="title-response"></h4>
+			<div class="row push-down">
+				<div class="col-8 offset-2 responses">
+					<h4 class="response-field push-down" id="title-response">Waiting to search..</h4>
 					<div class="response-field" id="title-url"></div>
 					<div class="response-field" id="response"></div>
 				</div>
