--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 			</div>
 		</div>
 		<div class="grid-container">
+			<div class="row align-center">
+				<img src="im/st.png" />
+			</div>
 			<div class="row">
 				<h1 class="align-center">I'm Feeling Stacky</h1>
 			</div>
