--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Feeling Stacky</title>
 	<link rel='stylesheet' href='style/deedubwhy.css'/>
+	<link rel='shortcut icon' href='im/favicon.ico' type='image/x-icon'/ >
 </head>
 <body>
 	<div class="grid-fluid">
