add lang tag, img alt

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang='en'>
 <head>
 	<!--Looking at the source code I see, thanks for being so interested!-->
 	<meta charset="utf-8"> 
@@ -8,8 +9,8 @@
 	<meta content = "I'm Feeling Stacky! When you can't be bothered searching stack overflow yourself, just yolo it." name="Description">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Feeling Stacky</title>
-	<link rel='stylesheet' href='style/deedubwhy.css'/>
-	<link rel='shortcut icon' href='im/favicon.ico' type='image/x-icon'/ >
+	<link rel='stylesheet' href='style/deedubwhy.css' />
+	<link rel='shortcut icon' href='im/favicon.ico' type='image/x-icon' />
 </head>
 <body>
 	<div class="grid-fluid">
@@ -20,7 +21,7 @@
 		</div>
 		<div class="grid-container">
 			<div class="row align-center">
-				<img src="im/st.png" />
+				<img src="im/st.png" alt="Stack Overflow Logo" />
 			</div>
 			<div class="row">
 				<h1 class="align-center">I'm Feeling Stacky</h1>
