remove duplicate description

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<meta name="description" content="I'm Feeling Stacky! When you can't be bothered searching stack overflow yourself, just enter what you want to learn about, and hope you get back the right thing.">
 	<meta name="keywords" content="im, feeling, stacky">
 	<meta name="robots" content="index,follow">
-	<meta name="description" content="I'm Feeling Stacky! When you can't be bothered searching stack overflow yourself, just enter what you want to learn about, and hope you get back the right thing.">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta property="og:title" content="I'm Feeling Stacky">
 	<meta property="og:description" content="I'm Feeling Stacky! When you can't be bothered searching stack overflow yourself, just enter what you want to learn about, and hope you get back the right thing.">
@@ -22,7 +21,7 @@
 <body>
 	<header role="banner" class="row blue-bg">
 		<div class="banner-text align-center">
-			Made by <a role="url" class="banner-link" href="https://davidyoung.tech">https://davidyoung.tech</a>
+			Made by <a class="banner-link" href="https://davidyoung.tech">https://davidyoung.tech</a>
 		</div>
 	</header>
 	<main role="main" class="grid-container">
