--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
 	<meta name="robots" content="index,follow">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta property="og:title" content="I'm Feeling Stacky">
-	<meta property="og:description" content="I'm Feeling Stacky! When you can't be bothered searching stack overflow yourself, just enter what you want to learn about, and hope you get back the right thing.">
+	<meta property="og:description" content="I'm Feeling Stacky! When you can't be bothered searching stack overflow yourself, just enter what you want to learn about, and hope you get back the right thing." name="Description">
 	<title>Feeling Stacky</title>
 	<meta name="twitter:site" content="dayvidwhy">
-	<link rel="canonical" href="https://davidyoung.tech">
 	<link rel='shortcut icon' href='/favicon.ico' type='image/x-icon' />
 	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="canonical" href="http://stacky.dwy.io">
