--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="canonical" href="http://stacky.dwy.io">
 	<style type="text/css">
-	.col-10,.col-3,.col-6,.col-8{float:left}.banner-link,.text{color:#FFF}.responses,code,input[type=text],pre{box-sizing:border-box}html{font-family:sans-serif;background-color:#FFF}body{margin:0;padding:0}svg{width:20%;margin-top:10px;fill:#f4a503}.grid-container{width:1024px;margin:auto}.grid-fluid{width:100%;overflow:auto}.row{clear:both;overflow:auto}.col-10{width:83.33333%}.col-8{width:66.66664%}.col-6{width:50%}.col-3{width:25%}.offset-3{margin-left:25%}.offset-2{margin-left:16.666666%}.offset-1{margin-left:8.333333%}.banner-text{width:100%;font-size:1.1em;color:#FFF;margin:20px 0}h1,h2,h3,h4,h5{font-weight:100}h1{font-size:3rem}h2{font-size:2.5rem}h3{font-size:2rem;margin-top:0}h4{font-size:1.8rem}h5{font-size:1.6rem}.text{width:100%;font-size:1.2em;display:inline-block}.banner-link:hover{color:#2ecc71}.answer,button{color:#000}.responses{background-color:#ecf0f1;padding:20px}.blue-bg{background-color:#2980b9}.darker-bg{background-color:#ecf0f1}.push-down{margin-top:20px;margin-bottom:20px}button,input[type=submit]{padding:14px 20px;cursor:pointer;margin-bottom:10px;transition:all .2s ease-in-out}.align-center{text-align:center}.align-right{text-align:right}.tiny-text{margin:10px;font-size:.5em;width:100%;text-align:center}input[type=text]{width:100%;padding:12px 20px;margin:8px 0;font-size:1.3em;border:1px solid #ccc}input[type=submit]{width:100%;background-color:#16bc9c;color:#fff;font-size:1.3em;border:none;border-radius:4px}button{width:98%;background-color:inherit;font-size:1em;border:1px solid #2980b9;border-radius:4px}button:hover{background-color:#3498db;color:#FFF}button:focus{outline:0}code,pre{white-space:pre-wrap}input[type=submit]:hover{background-color:#00f}@media screen and (max-width:1024px){.grid-container{width:95%;margin:auto}}@media screen and (max-width:768px){h1{font-size:2rem}h2{font-size:1.7rem}h3{font-size:1.5rem}h4{font-size:1.3rem}h5{font-size:1.2rem}.col-3{width:50%}.col-10,.col-6,.col-9{width:100%}.offset-1,.offset-2,.offset-3{margin-left:0}}@media screen and (max-width:550px){.col-3,button{width:100%}}
+	.col-10,.col-3,.col-6,.col-8{float:left}.banner-link,.text{color:#FFF}.responses,code,input[type=text],pre{box-sizing:border-box}html{font-family:sans-serif;background-color:#FFF}body{margin:0;padding:0}svg{width:20%;margin-top:10px;fill:#f4a503}.grid-container{width:1024px;margin:auto}.grid-fluid{width:100%;overflow:auto}.row{clear:both;overflow:auto}.col-10{width:83.33333%}.col-8{width:66.66664%}.col-6{width:50%}.col-3{width:25%}.offset-3{margin-left:25%}.offset-2{margin-left:16.666666%}.offset-1{margin-left:8.333333%}.banner-text{width:100%;font-size:1.1em;color:#FFF;margin:20px 0}h1,h2,h3,h4,h5{font-weight:100}h1{font-size:3rem}h2{font-size:2.5rem}h3{font-size:2rem;margin-top:0}h4{font-size:1.8rem}h5{font-size:1.6rem}.text{width:100%;font-size:1.2em;display:inline-block}.banner-link:hover{color:#2ecc71}.answer,button{color:#000}.responses{background-color:#ecf0f1;padding:20px}.blue-bg{background-color:#2980b9}.darker-bg{background-color:#ecf0f1}.push-down{margin-top:20px;margin-bottom:20px}button,input[type=submit]{padding:14px 20px;cursor:pointer;margin-bottom:10px;transition:all .2s ease-in-out}.align-center{text-align:center}.align-right{text-align:right}.tiny-text{margin:10px;font-size:.5em;width:100%;text-align:center}input[type=text]{width:100%;padding:12px 20px;margin:8px 0;font-size:1.3em;border:1px solid #ccc}input[type=submit]{width:100%;background-color:#16bc9c;color:#fff;font-size:1.3em;border:none;border-radius:4px}button{width:98%;background-color:inherit;font-size:1em;border:1px solid #2980b9;border-radius:4px}button:hover{background-color:#3498db;color:#FFF}button:focus{outline:0}code,pre{white-space:pre-wrap}input[type=submit]:hover{background-color:#00f}@media screen and (max-width:1024px){.grid-container{width:95%;margin:auto}}@media screen and (max-width:768px){h1{font-size:2rem}h2{font-size:1.7rem}h3{font-size:1.5rem}h4{font-size:1.3rem}h5{font-size:1.2rem}.col-3{width:50%}.col-10,.col-6,.col-8{width:100%}.offset-1,.offset-2,.offset-3{margin-left:0}}@media screen and (max-width:550px){.col-3,button{width:100%}}
+	/*general card for holding info*/
+	.card {
+		margin: 15px 10px;
+	}
 	</style>
 </head>
 <body>
@@ -32,44 +36,54 @@
 		</div>
 		<div class="row">
 			<div class="col-8 offset-2">
-				<h3 class="align-center">What do you need to know right now?</h3>
-				<p class="align-center">I made this as an example of multiple API callbacks to search for more in depth data.</p>
-				<p class="align-center">Do not phrase your query as a question, only include keywords.</p>
+				<div class="card">
+					<h3 class="align-center">What do you need to know right now?</h3>
+					<p class="align-center">I made this as an example of multiple API callbacks to search for more in depth data.</p>
+					<p class="align-center">Do not phrase your query as a question, only include keywords.</p>
+				</div>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-10 offset-1">
-				<input type="text" name="searching" maxlength="124" placeholder="Just tell me the answer to..">
+				<div class="card">
+					<input type="text" name="searching" maxlength="124" placeholder="Just tell me the answer to..">
+				</div>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-3 offset-3">
-				<button name="lucky" id="lucky" value="lucky" type="button">I'm Feeling Stacky</button>
-			</div>
-			<div class="col-3 align-right">
-				<button name="serious" id="serious" value="serious" type="button">I'm Feeling Serious</button>
+			<div class="card">
+				<div class="col-3 offset-3">
+					<button name="lucky" id="lucky" value="lucky" type="button">I'm Feeling Stacky</button>
+				</div>
+				<div class="col-3 align-right">
+					<button name="serious" id="serious" value="serious" type="button">I'm Feeling Serious</button>
+				</div>
 			</div>
 		</div>
 		<div class="row push-down">
-			<div class="col-10 offset-1 responses">
-				<h4 class="response-field push-down" id="title-response">Waiting to search..</h4>
-				<div class="response-field" id="title-url"></div>
-				<div class="response-field" id="response"></div>
+			<div class="card">
+				<div class="col-10 offset-1 responses">
+					<h4 class="response-field push-down" id="title-response">Waiting to search..</h4>
+					<div class="response-field" id="title-url"></div>
+					<div class="response-field" id="response"></div>
+				</div>
 			</div>
 		</div>
 	</main>
 	<footer class="row">
-		<div class="tiny-text">
-			This site is not affiliated with stackexchange or any of its relevant websites.
-		</div>
-		<div class="tiny-text">
-			<a href="https://github.com/dayvidwhy/feeling-stacky">Source on github</a>
+		<div class="card">
+			<div class="tiny-text">
+				This site is not affiliated with stackexchange or any of its relevant websites.
+			</div>
+			<div class="tiny-text">
+				<a href="https://github.com/dayvidwhy/feeling-stacky">Source on github</a>
+			</div>
 		</div>
 	</footer>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script type="text/javascript">
 	$(document).ready(function(){function a(a){$(".response-field").empty();var b=$("input[name=searching]").val();if(""===b||null===b)return void $("#title-response").text("You should ask me something.");$("#title-response").text("Finding your answer"),b=b.split(" ").join("%20");var c="https://api.stackexchange.com/2.2/search/advanced?order=desc&sort=activity&"+a.data.type+"="+b+"&accepted=True&site=stackoverflow";$.getJSON(c,function(a){if(!(a.items.length>0))return void $("#response").text("There was no answer to this question :(");var b=a.items[0].accepted_answer_id;$("#title-response").text(a.items[0].title),$("#title-url").html('<a href="'+a.items[0].link+'">'+a.items[0].link+"</a>");var c="https://api.stackexchange.com/2.2/answers/"+b+"?order=desc&sort=activity&site=stackoverflow&filter=withbody";$.getJSON(c,function(a){$("#response").html(a.items[0].body)})})}$("#lucky").click({type:"q"},a),$("#serious").click({type:"title"},a)});
-	</script>
-</body>
-</html>
+		</script>
+	</body>
+	</html>
