--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<meta name="twitter:site" content="dayvidwhy">
 	<link rel='shortcut icon' href='/favicon.ico' type='image/x-icon' />
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
-	<link rel="canonical" href="https://davidyoung.tech/feeling-stacky/">
+	<link rel="canonical" href="https://dayvidwhy.github.io/feeling-stacky/">
 	<link rel="stylesheet" type="text/css" href="style/style.css">
 </head>
 <body>
