Largely clean up JS code.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<meta property="og:description" content="I'm Feeling Stacky! When you can't be bothered searching stack overflow yourself, just enter what you want to learn about, and hope you get back the right thing." name="Description">
 	<title>Feeling Stacky</title>
 	<meta name="twitter:site" content="dayvidwhy">
+	<!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script><![endif]-->
+	<!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script><![endif]-->
 	<link rel='shortcut icon' href='/favicon.ico' type='image/x-icon' />
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
 	<link rel="canonical" href="https://dayvidwhy.github.io/feeling-stacky/">
