--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html lang="en">
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,7 +15,7 @@
     <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script><![endif]-->
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel='shortcut icon' href='<%= BASE_URL %>favicon.ico' type='image/x-icon' />
-    <link rel="canonical" href="https://dayvidwhy.github.io/feeling-stacky/">
+    <link rel="canonical" href="https://davidyoung.tech/feeling-stacky/">
   </head>
   <body>
     <noscript>
