Fix index html, references base url.

--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
     <title>Feeling Stacky</title>
     <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script><![endif]-->
     <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script><![endif]-->
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <link rel='shortcut icon' href='<%= BASE_URL %>favicon.ico' type='image/x-icon' />
+    <link rel="icon" href="./favicon.ico">
+    <link rel='shortcut icon' href='./favicon.ico' type='image/x-icon' />
     <link rel="canonical" href="https://davidyoung.tech/feeling-stacky/">
   </head>
   <body>
